Print best methods

--- a/CrabAnalyze.ipynb
+++ b/CrabAnalyze.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 176,
    "id": "7153b922-5a92-49be-aa4b-b39f010be095",
    "metadata": {},
    "outputs": [],
@@ -12,13 +12,19 @@
     "from pyspark.ml.evaluation import RegressionEvaluator\n",
     "from pyspark.ml.feature import VectorAssembler\n",
     "from pyspark.ml.regression import GBTRegressor\n",
+    "from pyspark.ml.regression import LinearRegression\n",
+    "from pyspark.ml.regression import DecisionTreeRegressor\n",
+    "from pyspark.ml.regression import IsotonicRegression\n",
+    "from pyspark.ml.regression import FMRegressor\n",
+    "from pyspark.ml.regression import GeneralizedLinearRegression\n",
     "from pyspark.sql import SparkSession\n",
-    "from pyspark.ml import Pipeline"
+    "from pyspark.ml import Pipeline\n",
+    "from pyspark.sql.functions import col"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 177,
    "id": "c4de6089-0596-491c-b979-31fd3e21a408",
    "metadata": {},
    "outputs": [
@@ -78,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 178,
    "id": "90fa70c4-5fb6-4a41-8f71-231cfd3c7f94",
    "metadata": {},
    "outputs": [
@@ -128,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 162,
    "id": "b8ce2583-1527-4290-83e6-9067e711e0ac",
    "metadata": {},
    "outputs": [],
@@ -145,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 163,
    "id": "595fc68b-e661-49b1-819b-96d3578250a8",
    "metadata": {},
    "outputs": [
@@ -186,8 +192,8 @@
    "source": [
     "# Оценка модели\n",
     "evaluator = RegressionEvaluator(labelCol = \"Age\", predictionCol = \"prediction\", metricName = \"rmse\")\n",
-    "rmse = evaluator.evaluate(predictionsRF)\n",
-    "print(\"Root Mean Squared Error (RMSE): %s\" % rmse)\n",
+    "rmseRF = evaluator.evaluate(predictionsRF)\n",
+    "print(\"Root Mean Squared Error (RMSE): %s\" % rmseRF)\n",
     "# Вывод результата и выключение SparkSession\n",
     "predictionsRF.select(\"Age\", \"prediction\").show()\n",
     "#spark.stop()"
@@ -195,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 164,
    "id": "bb493e00-3593-4b2c-989a-cdf76e94e398",
    "metadata": {},
    "outputs": [],
@@ -212,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 165,
    "id": "2e96de5b-957c-43bd-a0dc-7d2c217905a3",
    "metadata": {},
    "outputs": [
@@ -220,30 +226,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Root Mean Squared Error (RMSE): 2.2694767182967137\n",
+      "Root Mean Squared Error (RMSE): 2.2583145982417228\n",
       "+---+------------------+\n",
       "|Age|        prediction|\n",
       "+---+------------------+\n",
-      "|  9|7.7375495134360985|\n",
-      "| 10|7.7375495134360985|\n",
-      "|  8|7.7375495134360985|\n",
-      "|  7| 9.629664301633323|\n",
-      "|  7| 8.173401460744234|\n",
-      "|  8| 8.649666277831063|\n",
-      "| 10| 8.788465602981512|\n",
-      "|  9| 9.891146804749734|\n",
-      "| 10| 8.649666277831063|\n",
-      "|  7| 9.891146804749734|\n",
-      "|  7| 9.624494300702326|\n",
-      "|  8| 9.891146804749734|\n",
-      "| 11| 9.891146804749734|\n",
-      "|  6| 9.624494300702326|\n",
-      "|  9|11.572535377407089|\n",
-      "|  9| 9.891146804749734|\n",
-      "| 13|10.428633260338977|\n",
-      "| 13|12.579037250175992|\n",
-      "|  8|  8.87359801336318|\n",
-      "| 13| 9.891146804749734|\n",
+      "|  9| 7.601731414344994|\n",
+      "| 10| 7.601731414344994|\n",
+      "|  8|   8.1265215595973|\n",
+      "|  7| 9.202069566653186|\n",
+      "|  7| 8.148940461390136|\n",
+      "|  8| 8.625205278476965|\n",
+      "| 10| 9.279321550741239|\n",
+      "|  9| 9.858380155538812|\n",
+      "| 10| 9.124097604284172|\n",
+      "|  7| 10.05637329458689|\n",
+      "|  7| 9.509740903856851|\n",
+      "|  8|10.108892601147291|\n",
+      "| 11| 9.858380155538812|\n",
+      "|  6| 9.509740903856851|\n",
+      "|  9|12.294300980126295|\n",
+      "|  9| 10.05637329458689|\n",
+      "| 13|10.506719461440273|\n",
+      "| 13|12.781374133515333|\n",
+      "|  8|  7.67318735718679|\n",
+      "| 13| 9.858380155538812|\n",
       "+---+------------------+\n",
       "only showing top 20 rows\n",
       "\n"
@@ -253,17 +259,418 @@
    "source": [
     "# Оценка модели\n",
     "evaluator = RegressionEvaluator(labelCol = \"Age\", predictionCol = \"prediction\", metricName = \"rmse\")\n",
-    "rmse = evaluator.evaluate(predictionsGBT)\n",
-    "print(\"Root Mean Squared Error (RMSE): %s\" % rmse)\n",
+    "rmseGBT = evaluator.evaluate(predictionsGBT)\n",
+    "print(\"Root Mean Squared Error (RMSE): %s\" % rmseGBT)\n",
     "# Вывод результата и выключение SparkSession\n",
     "predictionsGBT.select(\"Age\", \"prediction\").show()\n",
+    "#spark.stop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "id": "98ed5f72-8cfa-4239-a076-954890ba25a2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Создание модели линейной регрессии\n",
+    "lr = LinearRegression(featuresCol=\"features\", labelCol=\"Age\", maxIter=10, regParam=0.3, elasticNetParam=0.8) \n",
+    "# Создание конвейера\n",
+    "pipelineLR = Pipeline(stages = [indexer, assembler, lr])\n",
+    "# Fit the model\n",
+    "modelLR = pipelineLR.fit(train)\n",
+    "# Предсказание возраста на тестовой выборке\n",
+    "predictionsLR = modelLR.transform(test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 167,
+   "id": "fdcab750-aeb4-481a-a91a-b433ca881ffd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Root Mean Squared Error (RMSE): 2.579961653876411\n",
+      "+---+------------------+\n",
+      "|Age|        prediction|\n",
+      "+---+------------------+\n",
+      "|  9| 7.647080104576439|\n",
+      "| 10| 7.376432872738925|\n",
+      "|  8|  7.66477689077303|\n",
+      "|  7| 9.301119967955419|\n",
+      "|  7| 7.742347246965229|\n",
+      "|  8| 8.110474241504926|\n",
+      "| 10| 8.372539183279702|\n",
+      "|  9| 8.586246080405784|\n",
+      "| 10| 8.441845873542388|\n",
+      "|  7| 8.939013512479402|\n",
+      "|  7| 8.598110909783623|\n",
+      "|  8| 8.511591736817113|\n",
+      "| 11|  8.80385732399132|\n",
+      "|  6| 8.612277066622966|\n",
+      "|  9|  9.02461930256062|\n",
+      "|  9| 8.911731123024163|\n",
+      "| 13| 9.265305866499462|\n",
+      "| 13| 9.640374692545175|\n",
+      "|  8|28.359676441418646|\n",
+      "| 13| 8.740840898929894|\n",
+      "+---+------------------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Оценка модели\n",
+    "evaluator = RegressionEvaluator(labelCol = \"Age\", predictionCol = \"prediction\", metricName = \"rmse\")\n",
+    "rmseLR = evaluator.evaluate(predictionsLR)\n",
+    "print(\"Root Mean Squared Error (RMSE): %s\" % rmseLR)\n",
+    "# Вывод результата и выключение SparkSession\n",
+    "predictionsLR.select(\"Age\", \"prediction\").show()\n",
+    "#spark.stop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
+   "id": "1e3503eb-cc60-4f5d-82ea-5c74bc213bc2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Создание модели решающих деервьев\n",
+    "dt = DecisionTreeRegressor(featuresCol=\"features\", labelCol=\"Age\")\n",
+    "# Создание конвейера\n",
+    "pipelineDT = Pipeline(stages = [indexer, assembler, dt])\n",
+    "# Fit the model\n",
+    "modelDT = pipelineDT.fit(train)\n",
+    "# Предсказание возраста на тестовой выборке\n",
+    "predictionsDT = modelDT.transform(test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 170,
+   "id": "15202ee5-c9d1-4a4b-bb2c-a0ca76e12f71",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Root Mean Squared Error (RMSE): 2.3033106593033175\n",
+      "+---+------------------+\n",
+      "|Age|        prediction|\n",
+      "+---+------------------+\n",
+      "|  9| 8.515463917525773|\n",
+      "| 10| 8.515463917525773|\n",
+      "|  8| 8.515463917525773|\n",
+      "|  7| 9.052631578947368|\n",
+      "|  7| 8.515463917525773|\n",
+      "|  8| 8.515463917525773|\n",
+      "| 10| 8.515463917525773|\n",
+      "|  9| 9.756944444444445|\n",
+      "| 10| 8.515463917525773|\n",
+      "|  7| 9.756944444444445|\n",
+      "|  7| 9.756944444444445|\n",
+      "|  8| 9.756944444444445|\n",
+      "| 11| 9.756944444444445|\n",
+      "|  6| 9.756944444444445|\n",
+      "|  9| 9.756944444444445|\n",
+      "|  9| 9.756944444444445|\n",
+      "| 13| 9.756944444444445|\n",
+      "| 13|11.507537688442211|\n",
+      "|  8| 7.804878048780488|\n",
+      "| 13| 9.756944444444445|\n",
+      "+---+------------------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Оценка модели\n",
+    "evaluator = RegressionEvaluator(labelCol = \"Age\", predictionCol = \"prediction\", metricName = \"rmse\")\n",
+    "rmseDT = evaluator.evaluate(predictionsDT)\n",
+    "print(\"Root Mean Squared Error (RMSE): %s\" % rmseDT)\n",
+    "# Вывод результата и выключение SparkSession\n",
+    "predictionsDT.select(\"Age\", \"prediction\").show()\n",
+    "#spark.stop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
+   "id": "2452bde3-dbe8-4d69-ade3-3436d83e7d7e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Создание модели изотонической регрессии\n",
+    "ir = IsotonicRegression(featuresCol=\"features\", labelCol=\"Age\")\n",
+    "# Создание конвейера\n",
+    "pipelineIR = Pipeline(stages = [indexer, assembler, ir])\n",
+    "# Fit the model\n",
+    "modelIR = pipelineIR.fit(train)\n",
+    "# Предсказание возраста на тестовой выборке\n",
+    "predictionsIR = modelIR.transform(test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 172,
+   "id": "752bd8f9-d795-4a7c-a3fd-3faf6e692e1e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Root Mean Squared Error (RMSE): 3.912391248823117\n",
+      "+---+------------------+\n",
+      "|Age|        prediction|\n",
+      "+---+------------------+\n",
+      "|  9|10.181337181337181|\n",
+      "| 10|10.181337181337181|\n",
+      "|  8|10.181337181337181|\n",
+      "|  7|10.181337181337181|\n",
+      "|  7|10.181337181337181|\n",
+      "|  8|10.181337181337181|\n",
+      "| 10|10.181337181337181|\n",
+      "|  9|10.181337181337181|\n",
+      "| 10|10.181337181337181|\n",
+      "|  7|10.181337181337181|\n",
+      "|  7|10.181337181337181|\n",
+      "|  8|10.181337181337181|\n",
+      "| 11|10.181337181337181|\n",
+      "|  6|10.181337181337181|\n",
+      "|  9|10.181337181337181|\n",
+      "|  9|10.181337181337181|\n",
+      "| 13|10.181337181337181|\n",
+      "| 13|10.181337181337181|\n",
+      "|  8|10.181337181337181|\n",
+      "| 13|10.181337181337181|\n",
+      "+---+------------------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Оценка модели\n",
+    "evaluator = RegressionEvaluator(labelCol = \"Age\", predictionCol = \"prediction\", metricName = \"rmse\")\n",
+    "rmseIR = evaluator.evaluate(predictionsIR)\n",
+    "print(\"Root Mean Squared Error (RMSE): %s\" % rmseIR)\n",
+    "# Вывод результата и выключение SparkSession\n",
+    "predictionsIR.select(\"Age\", \"prediction\").show()\n",
+    "#spark.stop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 173,
+   "id": "d4e46aa3-eec6-4304-9a7e-b41d196e5263",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Создание модели FMRegressor\n",
+    "fm = FMRegressor(featuresCol=\"features\", labelCol=\"Age\", predictionCol=\"prediction\",stepSize=0.001)\n",
+    "# Создание конвейера\n",
+    "pipelineFM = Pipeline(stages = [indexer, assembler, fm])\n",
+    "# Fit the model\n",
+    "modelFM = pipelineFM.fit(train)\n",
+    "# Предсказание возраста на тестовой выборке\n",
+    "predictionsFM = modelFM.transform(test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 174,
+   "id": "234e2445-4e37-4db5-86f0-4ac4656b7402",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Root Mean Squared Error (RMSE): 5.35109053198643\n",
+      "+---+------------------+\n",
+      "|Age|        prediction|\n",
+      "+---+------------------+\n",
+      "|  9|1.3120302935748251|\n",
+      "| 10|1.3541586261200584|\n",
+      "|  8|1.5336236978486755|\n",
+      "|  7| 4.026391330554553|\n",
+      "|  7|1.8983260448229755|\n",
+      "|  8|1.8517696853303236|\n",
+      "| 10|1.8931313322409584|\n",
+      "|  9|2.3402544906660534|\n",
+      "| 10|2.0773916644682973|\n",
+      "|  7|2.7406158867610104|\n",
+      "|  7|2.9277645764985603|\n",
+      "|  8|  2.46503516280356|\n",
+      "| 11| 2.793089647795517|\n",
+      "|  6|2.9979136278488148|\n",
+      "|  9|2.9432307343815083|\n",
+      "|  9| 2.853777826972006|\n",
+      "| 13|3.8249887069256774|\n",
+      "| 13|3.6753797938273696|\n",
+      "|  8|  5.37600673173027|\n",
+      "| 13|2.5580406619571927|\n",
+      "+---+------------------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Оценка модели\n",
+    "evaluator = RegressionEvaluator(labelCol = \"Age\", predictionCol = \"prediction\", metricName = \"rmse\")\n",
+    "rmseFM = evaluator.evaluate(predictionsFM)\n",
+    "print(\"Root Mean Squared Error (RMSE): %s\" % rmseFM)\n",
+    "# Вывод результата и выключение SparkSession\n",
+    "predictionsFM.select(\"Age\", \"prediction\").show()\n",
+    "#spark.stop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
+   "id": "d5d86962-d438-4d88-a41e-a5ce891f90bf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Модель  `AFTSurvivalRegression`  не подходит для датасета  `CrabAgePrediction`, так как нет информации о том,  \n",
+    "# живы ли были крабы, когда их поймали.\n",
+    "\n",
+    "# Эта модель предназначена для анализа данных выживания, где есть данные о времени до события (в данном случае, смерть) \n",
+    "# и информация о том,  было ли это событие наблюдено (краб умер) или  **цензурировано**  (краб был жив, когда его поймали).  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 179,
+   "id": "ed06ed51-e45b-434e-9dc8-406023416bef",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "24/06/09 01:56:27 WARN LAPACK: Failed to load implementation from: com.github.fommil.netlib.NativeSystemLAPACK\n",
+      "24/06/09 01:56:27 WARN LAPACK: Failed to load implementation from: com.github.fommil.netlib.NativeRefLAPACK\n"
+     ]
+    }
+   ],
+   "source": [
+    "glr = GeneralizedLinearRegression(featuresCol=\"features\", labelCol=\"Age\", family=\"gaussian\", link=\"identity\", maxIter=10, regParam=0.3)\n",
+    "# Создание конвейера\n",
+    "pipelineGLR = Pipeline(stages = [indexer, assembler, glr])\n",
+    "# Fit the model\n",
+    "modelGLR = pipelineGLR.fit(train)\n",
+    "# Предсказание возраста на тестовой выборке\n",
+    "predictionsGLR = modelGLR.transform(test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "id": "d74f2b28-c31a-408a-970d-4a92f7a5f15a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Root Mean Squared Error (RMSE): 2.3887452525121136\n",
+      "+---+------------------+\n",
+      "|Age|        prediction|\n",
+      "+---+------------------+\n",
+      "|  9| 7.494100623301231|\n",
+      "| 10| 7.178808381551332|\n",
+      "|  8| 7.433041136683782|\n",
+      "|  7| 8.685829205427842|\n",
+      "|  7| 7.334002582304484|\n",
+      "|  8| 7.985053710573677|\n",
+      "| 10|  8.33746522216055|\n",
+      "|  9|  8.61636127335104|\n",
+      "| 10| 8.490470332227247|\n",
+      "|  7|  9.16165662431091|\n",
+      "|  7| 8.526349983048226|\n",
+      "|  8|  8.63925358802613|\n",
+      "| 11| 9.038253044888194|\n",
+      "|  6| 8.419051995114586|\n",
+      "|  9| 8.997563331236265|\n",
+      "|  9| 9.110619617715807|\n",
+      "| 13| 9.210283301035286|\n",
+      "| 13|10.105747252959798|\n",
+      "|  8| 31.62050909871427|\n",
+      "| 13| 9.006838873792155|\n",
+      "+---+------------------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Оценка модели\n",
+    "evaluator = RegressionEvaluator(labelCol = \"Age\", predictionCol = \"prediction\", metricName = \"rmse\")\n",
+    "rmseGLR = evaluator.evaluate(predictionsGLR)\n",
+    "print(\"Root Mean Squared Error (RMSE): %s\" % rmseGLR)\n",
+    "# Вывод результата и выключение SparkSession\n",
+    "predictionsGLR.select(\"Age\", \"prediction\").show()\n",
+    "#spark.stop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 181,
+   "id": "808f4ead-0c11-4125-bbbc-805e2b882f0c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Лучшая модель: Gradient Boosted Trees (RMSE: 2.2583145982417228)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Вывод лучшего метода\n",
+    "#Можно было бы еще записывать результаты в словарь \n",
+    "best_model = \"\"\n",
+    "best_rmse = float(\"inf\")\n",
+    "if rmseLR < best_rmse:\n",
+    "    best_model = \"Linear Regression\"\n",
+    "    best_rmse = rmseLR\n",
+    "if rmseRF < best_rmse:\n",
+    "    best_model = \"Random Forest\"\n",
+    "    best_rmse = rmseRF\n",
+    "if rmseGBT < best_rmse:\n",
+    "    best_model = \"Gradient Boosted Trees\"\n",
+    "    best_rmse = rmseGBT\n",
+    "if rmseFM < best_rmse:\n",
+    "    best_model = \"Factorization machines regressor\"\n",
+    "    best_rmse = rmseLR\n",
+    "if rmseIR < best_rmse:\n",
+    "    best_model = \"Isotonic Regression\"\n",
+    "    best_rmse = rmseRF\n",
+    "if rmseDT < best_rmse:\n",
+    "    best_model = \"Decision Tree Regressor\"\n",
+    "    best_rmse = rmseGBT\n",
+    "if rmseGLR < best_rmse:\n",
+    "    best_model = \"Generalized Linear Regression\"\n",
+    "    best_rmse = rmseGLR\n",
+    "print(f\"Лучшая модель: {best_model} (RMSE: {best_rmse})\")\n",
     "spark.stop()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "98ed5f72-8cfa-4239-a076-954890ba25a2",
+   "id": "324c91d5-ee52-45bc-9f19-44ce068639d4",
    "metadata": {},
    "outputs": [],
    "source": []
